# MasterBuilder7

./: .gitignore  .zo-handshake.json  72-AGENT-SYSTEM.md  AGENT-ROLL-CALL.md  AGENTS.md  ARCHITECTURE.md  AUDIT_REVIEW.md  AUDIT_REVIEW_V2.md  CURRENT_TUNNEL_URL.txt  EASY_NGROK_SETUP.md  ELITE_SQUAD_INTEGRATION.md  FINAL_AUDIT_ROUND3.md  FINAL_DEEP_DIVE_AUDIT.md  KIMI_NEXT_STEPS.md  MCP-BRIDGE.ts  MCP_CONNECTION_GUIDE.md  MULTI_AI_GUIDE.md  N8N-AUTOMATION-README.md  ORCHESTRATE_ALL.sh  PROMPT_1_ERROR_RECOVERY.md  PROMPT_2_COST_ESTIMATION.md  PROMPT_3_AGENT_INTEROPERABILITY.md  PROMPT_4_TESTING_VALIDATION.md  PROMPT_5_MASTER_ORCHESTRATOR.md  README_GP_DEPLOY.md  REAL_BUILDER.py  REAL_ORCHESTRATOR.py  RUN_EVERYTHING.sh  SECURITY_GUIDE.md  TRI-ZO-BRIDGE.ts  ZO_BRIDGE_GUIDE.md  agent-orchestrator.yaml  agent_sdk.py  apex-service.service  api_agent_module.py  budget_guardrail.py  call_list.txt  canister_manager.py  capacitor_android_builder.py  config.yaml  (+32 more)
.claude/: metadata-updater.sh  settings.json
ELITE-SQUAD-8/: orchestrator.py  start-autonomous.sh
EliteSquad/: .gitignore  AUDIT_REPORT.md  KIMI_CLI_INTEGRATION.md  README.md  SECURITY_REPORT.md  STATUS.md  TANDEM_WORKFLOW.md  bridge-connector.ts  config.ts  connector.ts  elite-bridge-daemon.ts  package.json  run-8-agents-continuous.ts  tsconfig.json
Vortex3D-main/: Vortex3D.html  Vortex3D.js
agent-orchestrator/: README.md  SECURITY.md  SETUP.md  eslint.config.js  pnpm-workspace.yaml
agents/: README.md
antfarm/: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  vercel.json
apex/: INTEGRATION_README.md  README.md  __init__.py  agent-worker.ts  agent_layer.py  agentic_build_master.py  checkpoint-system.ts  dashboard.ts  emergency-kill-switch.ts  fleet-composition.yaml  fleet-manager.ts  fleet.db  integration.py  launcher.ts  main.py  multi_ai_orchestrator.py  package.json  requirements.txt  skill-connector.ts  spend-guardrail.ts  yolo_multi_ai.py  zo-connector.ts
api/: server.ts  server_hardened.ts
app-store-deployer/: DEPLOYMENT_ARCHITECTURE.md  parallel-orchestrator.ts
core/: inter-zo-protocol.ts  orchestrator.db  stress-test-framework.ts
cost-tracking/: guardian.ts
dashboard/: index.html  server.ts
database/: .env.example  README.md  SCHEMA_SUMMARY.md  __init__.py  alembic.ini  models.py  requirements.txt  schema.sql  seed_data.py  utils.py
deploy/: agent-deployer.ts  builder.py  play-store-deploy.ts  store_deploy.py
docker/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.agent  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
docs/: openapi.yaml  (+6 more)
skills/immediate/self-healing-tests/: SKILL.md  pyproject.toml  requirements.txt
skills/immediate/self-healing-tests/src/: __init__.py  analyzer.py  cli.py  healer.py  plugin.py
skills/immediate/self-healing-tests/tests/: __init__.py  test_analyzer.py
subatomic-agents/: ARCHITECTURE_SUMMARY.md  Cargo.toml  README.md
subatomic-agents/consensus/: gossip_consensus.rs  raft.rs  voting.rs
subatomic-agents/core/: agent.rs  lifecycle.rs  swarm.rs  task.rs
subatomic-agents/docs/: ARCHITECTURE.md  COST_ANALYSIS.md  DEPLOYMENT.md
subatomic-agents/examples/gateway_node/: main.rs
subatomic-agents/examples/inference_node/: main.rs
subatomic-agents/examples/pi_zero_worker/: main.rs
subatomic-agents/incentives/: proof_of_work.rs  reputation.rs  rewards.rs
subatomic-agents/inference/: models.rs  runtime.rs  tasks.rs
subatomic-agents/integration/: ihhashi.rs
subatomic-agents/networking/: bluetooth.rs  mesh.rs  transport.rs  wifi_direct.rs
subatomic-agents/protocols/: crdt.rs  gossip.rs  message.rs  routing.rs
subatomic-agents/src/: lib.rs
(+1066 files in other folders)
