[package]
name = "subatomic-agents"
version = "0.1.0"
edition = "2021"
authors = ["iHhashi Team <dev@ihhashi.co.za>"]
description = "Sub-Atomic Agent Swarm - Enterprise automation on ultra-low resources"
license = "MIT"
repository = "https://github.com/ihhashi/subatomic-agents"
keywords = ["distributed", "mesh", "p2p", "iot", "automation"]
categories = ["network-programming", "distributed-computing"]

[workspace]
members = ["."]

[lib]
name = "subatomic_agents"
path = "src/lib.rs"

[[bin]]
name = "pi_zero_worker"
path = "examples/pi_zero_worker/main.rs"

[[bin]]
name = "gateway_node"
path = "examples/gateway_node/main.rs"

[[bin]]
name = "inference_node"
path = "examples/inference_node/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"
reqwest = { version = "0.11", features = ["json"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Data structures
dashmap = "5.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
chrono = "0.4"
gethostname = "0.4"

# Optional features
[features]
default = []
onnx = ["ort"]
llama = []

[dependencies.ort]
version = "1.16"
optional = true

[dev-dependencies]
tokio-test = "0.4"

# Profile for release builds (optimized for size for Pi Zero)
[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Single codegen unit for better optimization
panic = "abort"      # Smaller binary size
strip = true         # Strip symbols

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"

# Profile for development
[profile.dev]
opt-level = 0
debug = true
