[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "self-healing-tests"
version = "1.0.0"
description = "Pytest plugin for auto-fixing flaky tests"
readme = "SKILL.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RobeetsDay Project"}
]
keywords = ["pytest", "testing", "flaky", "self-healing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OS Public License (MIT)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
    "astor>=0.8.1",
    "loguru>=0.7.0",
    "GitPython>=3.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.entry-points.pytest11]
self_healing_tests = "self_healing_tests.plugin"

[project.scripts]
self-heal = "self_healing_tests.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
